# agro-risk-engine

./: .gitignore  .~lock.SojaSerieHist.xls#  README.md  api.py  main.py  project_structure.txt  projeto_limpo_ia.txt  pyproject.toml  requirements.txt  sanitize.py  settings.yaml
.github/workflows/: ci.yml
core/: advisor.py  backtest_engine.py  brapi_client.py  climate_risk.py  context.py  data_loader.py  db.py  engine.py  env.py  factory.py  historical_climate_loader.py  ibge_client.py  logger.py  market_data.py  market_router.py  persister.py  pipeline.py  scout.py  seasonality.py  validation_engine.py
core/indicators/: __init__.py  financial.py  fundamental.py  macro.py  technical.py
core/reporting/: presenter.py
core/strategies/: base.py  mt_strategy.py  pr_strategy.py
data_ingestion/: worker_geopolitics.py  worker_market.py
docs/: TECH_REFERENCE.MD
flow/: destination.py  export.py  origination.py
scripts/: ingest_conab.py  ingest_historical_market.py  run_backtest.py  seed_portfolio.py
sql/: schema_v2.sql
tests/: test_indicators.py
