[project]
name = "agro-risk-engine"
version = "2.6.0"
description = "Motor de Modelagem de Risco de Crédito Agrícola (Enterprise Core)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Seu Nome", email = "seu.email@exemplo.com" }
]
license = { text = "MIT" }

# Dependências de Produção
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.0",
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "supabase>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.10",
    "scipy>=1.10.0",
    "openpyxl>=3.1.0"
]

# Dependências de Desenvolvimento (Testes, Linting)
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",  # Linter rápido (substituto do flake8/black)
    "mypy>=1.5.0"   # Checagem de tipos estática
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configurações de Ferramentas (Centralizando configs aqui)
[tool.pytest.ini_options]
pythonpath = "."
addopts = "-v"

[tool.ruff]
line-length = 120